<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_bg"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".ui.ActionQuestion"
    android:id="@+id/action_qouestion">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="top|start"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@drawable/logo_pic_foreground" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">


        <TextView
            android:id="@+id/ads_title"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:layout_marginStart="48dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="48dp"
            android:text="@string/loading"
            android:textColorHint="@color/white" />

        <TextView
            android:id="@+id/ads_body"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:layout_marginStart="48dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="48dp"
            android:text="@string/loading"

            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/btn_accept"
            style="@style/Theme.AskJowe.Button"
            android:layout_width="match_parent"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@drawable/round_shape_button"
            android:text="@string/agree"
            android:theme="@style/Theme.AskJowe.Button"/>
        <Button
            android:id="@+id/btn_demiss"
            style="@style/Theme.AskJowe.Button"
            android:layout_width="match_parent"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@drawable/round_shape_button"
            android:text="@string/demiss"
            android:theme="@style/Theme.AskJowe.Button"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>